<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/alunos"
    tools:context=".DetalhesDisciplinaActivity">

    <TextView
        android:id="@+id/textViewDisciplinaAluno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/aluno"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewDisciplina"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/disciplina"
        android:textColor="@color/white"
        android:layout_marginTop="48dp"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDisciplinaAluno" />

    <ImageButton
        android:id="@+id/imageButtonEditDisciplina"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/editar_aluno"
        android:src="@drawable/ic_edit"
        android:background="@color/white"
        android:layout_marginTop="16dp"
        android:padding="16dp"
        app:layout_constraintEnd_toStartOf="@+id/imageButtonDeleteDisciplina"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDisciplina" />

    <ImageButton
        android:id="@+id/imageButtonDeleteDisciplina"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/deletar_aluno"
        android:src="@drawable/ic_delete"
        android:background="@color/white"
        android:layout_marginTop="16dp"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageButtonEditDisciplina"
        app:layout_constraintTop_toBottomOf="@+id/textViewDisciplina" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:alpha="0.2"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButtonEditDisciplina" />


</androidx.constraintlayout.widget.ConstraintLayout>